--- a/html/body.html
+++ b/html/body.html
@@ -41,7 +41,7 @@
             <div class="slide">
               <img src="../images/img-3.jpg" alt="">
               <div class="info">
-                <h2>Creatividty & Innovation</h2>
+                <h2>Creativity & Innovation</h2>
               </div>
             </div>
             <div class="slide">
@@ -76,7 +76,7 @@
             Welcome to the Department of Computer Application of Integral University.
         </p>
         <p class="content">
-            The Department was established in 2003 and is one of the most reputed academic departments in the field of Computer Application. The curriculum of this department is addressed to the students who wish to be distinguished as Software Developer, Computer System Analyst , Software Engineer , Software Application Architect , Hardware Engineer , Software Consultant , Database Administrator in the private and public sector. You can become part of this highly competitive and futuristic environment by enrolling for one of our exciting  <u></programs> <b> <span style="color: blueviolet;"> The Department offers a 6 semester Bachelor program in Computer Application (BCA) , 6 semester Master program in Computer Application </span> </b></u>,The combination of a dynamic and innovative curriculum that takes advantage of the latest technologies, with the experienced faculties of the Department, creates a fertile ground for the effective dissemination of knowledge and the development of the necessary skills for future professional recognition of the Department's students.
+            The Department was established in 2003 and is one of the most reputed academic departments in the field of Computer Application. The curriculum of this department is addressed to the students who wish to be distinguished as Software Developer, Computer System Analyst , Software Engineer , Software Application Architect , Hardware Engineer , Software Consultant , Database Administrator in the private and public sector. You can become part of this highly competitive and futuristic environment by enrolling for one of our exciting  <u><b> <i><span style="color: blueviolet;"> The Department offers a 6 semester Bachelor program in Computer Application (BCA) , 6 semester Master program in Computer Application </span></i> </b></u>,The combination of a dynamic and innovative curriculum that takes advantage of the latest technologies, with the experienced faculties of the Department, creates a fertile ground for the effective dissemination of knowledge and the development of the necessary skills for future professional recognition of the Department's students.
         </p>
     </div>
     
@@ -121,7 +121,7 @@
 
     <div class="content2 ">
         <p class="content">
-         The Department promotes research advancements by offering doctoral program, contributing in the creation of future researchers and powerful academicians. <span style="color: blueviolet;"> <b> <u> The thrust areas offered by the Department are Big Data Analytics , Cloud Computing, Image Processing , Web Engineering, and Software Engineering.</u> </b> </span> The department has dedicated staff who , through on-going research , keeps abreast of new developments in respective fields of study. Our staffs are very active researchers , publishing widely in international and local accredited journals , presenting many papers at conferences and producing many other research outputs of high international standard. The department continues to build on a tradition of excellence and innovation in research , teaching , and service to create a vibrant community of faculty , graduate students , and undergraduate students that are ready to make a difference in the world. I invite you to look over these webpages and learn more about the opportunities the Department of Computer Application offers our undergraduate and graduate students.  </p>
+         The Department promotes research advancements by offering doctoral program, contributing in the creation of future researchers and powerful academicians. <span style="color: blueviolet;"> <i><b> <u> The thrust areas offered by the Department are Big Data Analytics , Cloud Computing, Image Processing , Web Engineering, and Software Engineering.</u> </b> </i></span> The department has dedicated staff who , through on-going research , keeps abreast of new developments in respective fields of study. Our staffs are very active researchers , publishing widely in international and local accredited journals , presenting many papers at conferences and producing many other research outputs of high international standard. The department continues to build on a tradition of excellence and innovation in research , teaching , and service to create a vibrant community of faculty , graduate students , and undergraduate students that are ready to make a difference in the world. I invite you to look over these webpages and learn more about the opportunities the Department of Computer Application offers our undergraduate and graduate students.  </p>
     </div>
 
   <!-- Information about Department -->
